--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,68 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--2_1900-1929 with 2 extensions-->
- <maintag>
+<rss>
 <item>
-<name>AndroidPeople</name>
-<website category="android">www.androidpeople.com</website>
+<id>1</id>
+<title>Image 1</title>
+<desc>
+Whether its made with soy byproducts milk or clay, these natural wall color options are healthy for your home.
+</desc>
+<pubDate>22/03/2012</pubDate>
+<link>
+https://www.dropbox.com/s/jpqsvse4xx9qt96/image1.jpg
+</link>
 </item>
 <item>
-<name>iPhoneAppDeveloper</name>
-<website category="iPhone">www.iphone-app-developer.com</website>
+<id>2</id>
+<title>Image 2</title>
+<desc>
+Part of the English Sports range. The Cricket Wallpaper builds on the small pattern repeat of traditional papers.
+</desc>
+<pubDate>23/03/2012</pubDate>
+<link>
+https://www.dropbox.com/s/n29704f65zigty7/image2.jpeg
+</link>
 </item>
-</maintag>
+<item>
+<id>3</id>
+<title>Image 3</title>
+<desc>
+Whatever your industry if youre a full time professional your smartphone is your best friend.
+</desc>
+<pubDate>27/03/2012</pubDate>
+<link>
+https://www.dropbox.com/s/1l3qoojbi4drqsd/image3.jpeg
+</link>
+</item>
+<item>
+<id>4</id>
+<title>Image 4</title>
+<desc>
+Natural paints are generally more expensive than conventional paints and arent always widely available, but can be ordered online.
+</desc>
+<pubDate>29/03/2012</pubDate>
+<link>
+https://www.dropbox.com/s/f9n3u3d5okk9x2v/image4.jpg
+</link>
+</item>
+<item>
+<id>5</id>
+<title>Image 5</title>
+<desc>
+The overall feel is transformed by the use of a contemporary colour palette - in this case Natural.
+</desc>
+<pubDate>30/03/2012</pubDate>
+<link>
+https://www.dropbox.com/s/r327l5t4jb59wwo/image5.jpg
+</link>
+</item>
+<item>
+<id>6</id>
+<title>Image 6</title>
+<desc>
+The bats and balls fade into geometric shapes providing the perfect backdrop for the sporty and design conscious.
+</desc>
+<pubDate>02/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/b2yiynjar4e6l3r/image6.jpg
+</link>
+</item>
+</rss>
