--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 <id>1</id>
 <title>Image 1</title>
 <desc>
-Whether its made with soy byproducts milk or clay, these natural wall color options are healthy for your home.
+Whether it's made with soy byproducts, milk, or clay, these natural wall color options are healthy for your home.
 </desc>
 <pubDate>22/03/2012</pubDate>
 <link>
-https://www.dropbox.com/s/jpqsvse4xx9qt96/image1.jpg
+https://www.dropbox.com/s/jpqsvse4xx9qt96/image1.jpg?dl=1
 </link>
 </item>
 <item>
@@ -18,29 +18,29 @@ Part of the English Sports range. The Cricket Wallpaper builds on the small patt
 </desc>
 <pubDate>23/03/2012</pubDate>
 <link>
-https://www.dropbox.com/s/n29704f65zigty7/image2.jpeg
+https://www.dropbox.com/s/n29704f65zigty7/image2.jpeg?dl=1
 </link>
 </item>
 <item>
 <id>3</id>
 <title>Image 3</title>
 <desc>
-Whatever your industry if youre a full time professional your smartphone is your best friend.
+Whatever your industry, if you’re a full time professional, your smartphone is your best friend.
 </desc>
 <pubDate>27/03/2012</pubDate>
 <link>
-https://www.dropbox.com/s/1l3qoojbi4drqsd/image3.jpeg
+https://www.dropbox.com/s/1l3qoojbi4drqsd/image3.jpeg?dl=1
 </link>
 </item>
 <item>
 <id>4</id>
 <title>Image 4</title>
 <desc>
-Natural paints are generally more expensive than conventional paints and arent always widely available, but can be ordered online.
+Natural paints are generally more expensive than conventional paints and aren’t always widely available, but can be ordered online.
 </desc>
 <pubDate>29/03/2012</pubDate>
 <link>
-https://www.dropbox.com/s/f9n3u3d5okk9x2v/image4.jpg
+https://www.dropbox.com/s/f9n3u3d5okk9x2v/image4.jpg?dl=1
 </link>
 </item>
 <item>
@@ -51,7 +51,7 @@ The overall feel is transformed by the use of a contemporary colour palette - in
 </desc>
 <pubDate>30/03/2012</pubDate>
 <link>
-https://www.dropbox.com/s/r327l5t4jb59wwo/image5.jpg
+https://www.dropbox.com/s/r327l5t4jb59wwo/image5.jpg?dl=1
 </link>
 </item>
 <item>
@@ -62,7 +62,216 @@ The bats and balls fade into geometric shapes providing the perfect backdrop for
 </desc>
 <pubDate>02/04/2012</pubDate>
 <link>
-https://www.dropbox.com/s/b2yiynjar4e6l3r/image6.jpg
+https://www.dropbox.com/s/b2yiynjar4e6l3r/image6.jpg?dl=1
+</link>
+</item>
+<item>
+<id>7</id>
+<title>Image 7</title>
+<desc>
+It keeps your organized, in the loop, and productive all day, all week, and all year. But how your phone looks is as important as how it functions! Set the right, professional impression with these wallpapers.
+</desc>
+<pubDate>05/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/m3fpujh1it22ame/image7.jpg?dl=1
+</link>
+</item>
+<item>
+<id>8</id>
+<title>Image 8</title>
+<desc>
+Vertical blinds are perfect for patio doors, wide windows and they can be used as room dividers.
+</desc>
+<pubDate>06/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/f9y95w4pisxn014/image8.jpg?dl=1
+</link>
+</item>
+<item>
+<id>9</id>
+<title>Image 9</title>
+<desc>
+Cover your windows with style and durability with vinyl blinds, available in a variety of colors.
+</desc>
+<pubDate>07/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/z9336i3phjhhr1v/image9.jpg?dl=1
+</link>
+</item>
+<item>
+<id>10</id>
+<title>Image 10</title>
+<desc>
+Prevent your furniture and carpeting from being damaged by harmful sun rays with stylish solar shades
+</desc>
+<pubDate>10/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/ll0twrvhn76shdq/image10.jpg?dl=1
+</link>
+</item>
+<item>
+<id>11</id>
+<title>Image 11</title>
+<desc>
+Glass essence blinds are fashioned after ornate stained and etched glass creations.
+</desc>
+<pubDate>11/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/wthmc2975cphht8/image11.jpg?dl=1
+</link>
+</item>
+<item>
+<id>12</id>
+<title>Image 12</title>
+<desc>
+Accent your windows with soft vertical blinds, available in a variety of styles and colors.
+</desc>
+<pubDate>14/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/j6eafqgpq26j2is/image12.jpg?dl=1
+</link>
+</item>
+<item>
+<id>13</id>
+<title>Image 13</title>
+<desc>
+Natural drapes are available in a variety of styles and colors and are made from natural materials.
+</desc>
+<pubDate>15/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/9rpevhjlyl5397f/image13.jpg?dl=1
+</link>
+</item>
+<item>
+<id>14</id>
+<title>Image 14</title>
+<desc>
+Natural shades are woven from organic materials which helps conserve our natural resources.
+</desc>
+<pubDate>16/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/kq381z079xqhy9h/image14.jpg?dl=1
+</link>
+</item>
+<item>
+<id>15</id>
+<title>Image 15</title>
+<desc>
+Add texture to your windows with our selection of pleated shades, available in a variety of styles.
+</desc>
+<pubDate>17/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/n6qr7qaa6bott5p/image15.jpg?dl=1
+</link>
+</item>
+<item>
+<id>16</id>
+<title>Image 16</title>
+<desc>
+Roman shades are distinctive, stylish and available in a variety of fabrics and colors.
+</desc>
+<pubDate>18/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/hexxqbvgawxmev7/image16.jpg?dl=1
+</link>
+</item>
+<item>
+<id>17</id>
+<title>Image 17</title>
+<desc>
+Glass tiles have vibrant and bold colors, combined with a reflective quality to provide a dramatic, unique and distinctive appearance. They can be used in large spaces with mosaics or as an accent to personalize your design.
+</desc>
+<pubDate>19/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/r0anhf4yzyjd5sa/image17.jpg?dl=1
+</link>
+</item>
+<item>
+<id>18</id>
+<title>Image 18</title>
+<desc>
+Limestone is a natural stone that is most often used for flooring application, in both residential and commercial projects
+</desc>
+<pubDate>20/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/204mm6a7ramlt9i/image18.jpg?dl=1
+</link>
+</item>
+<item>
+<id>19</id>
+<title>Image 19</title>
+<desc>
+Medallions are comprised of two or more types of tiles to form unique patterns and motifs
+</desc>
+<pubDate>22/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/gqrtbpvq0dihwrv/image19.jpg?dl=1
+</link>
+</item>
+<item>
+<id>20</id>
+<title>Image 20</title>
+<desc>
+Travertine is a beautiful combination of limestone and natural stone and is available in creamy, golden or reddish colors.
+</desc>
+<pubDate>24/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/qt1f6gasubglcqh/image20.jpg?dl=1
+</link>
+</item>
+<item>
+<id>21</id>
+<title>Image 21</title>
+<desc>
+Slate is a natural stone material that is available in a variety of color ranges
+</desc>
+<pubDate>25/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/c65alzuui4t5jpz/image21.jpg?dl=1
+</link>
+</item>
+<item>
+<id>22</id>
+<title>Image 22</title>
+<desc>
+Quarry tile is an unglazed ceramic tile that is very durable. They are a natural and unique option for commercial and residential applications in high traffic areas because they are is less prone to chips and scratches.
+</desc>
+<pubDate>27/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/w1fkt0pj2byk32t/image22.jpg?dl=1
+</link>
+</item>
+<item>
+<id>23</id>
+<title>Image 23</title>
+<desc>
+Granite is a dense natural stone that is extremely durable and water resistant
+</desc>
+<pubDate>28/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/mox3hz4v690dcau/image23.jpg?dl=1
+</link>
+</item>
+<item>
+<id>24</id>
+<title>Image 24</title>
+<desc>
+SnapStone floating tile is made with genuine, durable porcelain tile that is permanently bonded to an interlocking tray with a rubberized base.
+</desc>
+<pubDate>29/04/2012</pubDate>
+<link>
+https://www.dropbox.com/s/30n60cty2nzzm2q/image24.jpg?dl=1
+</link>
+</item>
+<item>
+<id>25</id>
+<title>Image 25</title>
+<desc>
+Cork floating planks and glued down tiles are made from a renewable, environmentally-friendly resource.
+</desc>
+<pubDate>01/05/2012</pubDate>
+<link>
+https://www.dropbox.com/s/yf65t7hb0iq04z9/image25.png?dl=1
 </link>
 </item>
 </rss>
